  If a module `m` has an `import_module` or `use_module` declaration for
  module `x.y.z`, it must also have `import_module` or `use_module`
  declarations for its ancestors `x` and `x.y`. And if the import or use
  of `x.y.z` is in module `m`'s interface, then the import or use of `x.y.z`'s
  ancestor modules must also be in the interface.

* References to everything imported via `:- use_module` declarations
  must now be fully module qualified.

* `for` is now an operator. (See the extension of the syntax of inst
  declarations below.)

* It is now an error for a program to redefine a builtin type. The affected
  type names are:

        int
        int{8,16,32,64}
        uint
        uint{8,16,32,64}
        float
        character
        string
        {}
        =
        pred
        func
        pure
        semipure
        impure
        ''

* It is now an error for a program to redefine a builtin inst. The affected
  inst names are:

        =<
        any
        bound
        bound_unique
        clobbered
        clobbered_any
        free
        ground
        is
        mostly_clobbered
        mostly_unique
        mostly_unique_any
        not_reached
        unique
        unique_any

* It is now an error for a program to redefine a builtin mode. The affected
  mode names are:

        =
        >>
        any_func
        any_pred
        func
        is
        pred

* We have deleted the builtin inst synonyms `old` and `new`: their uses
  should be replaced with `any` and `free` respectively.

* We have deleted the builtin modes `no` and `oo`: their uses should be
  replaced with `oa` and `ia` respectively.

* The minimum version of the Java platform required by Mercury's Java
  backend is now Java SE 8.

* The representation of integer constants in the standard library's `term`
  and `lexer` modules has been generalised. The base, signedness and size of
  each integer constant is now recorded. Furthermore, these modules now use