@@ -93,7 +93,6 @@ $(MC_PROG).depend: Mercury.modules COMP_FLAGS
 # This directory contains source files for which the module
 # name doesn't match the file name, so smart recompilation
 # won't work without the Mercury.modules file.
-.PHONY: Mercury.modules
 Mercury.modules: COMP_FLAGS
 	$(MC) $(ALL_GRADEFLAGS) $(ALL_MCFLAGS) -f *.m
 
