@@ -88,7 +88,13 @@ endif
 .PHONY: depend
 depend:	$(MDBCOMP_MODULES) $(DEPENDS)
 
-$(DEPENDS): SLICE_FLAGS $(MDBCOMP_MODULES)
+$(DEPENDS): Mercury.modules SLICE_FLAGS $(MDBCOMP_MODULES)
+
+# This directory contains source files for which the module
+# name doesn't match the file name, so smart recompilation
+# won't work without the Mercury.modules file.
+Mercury.modules: SLICE_FLAGS
+	$(MC) $(ALL_GRADEFLAGS) $(ALL_MCFLAGS) -f *.m
 
 .PHONY: all
 all:	$(MDBCOMP_MODULES) $(MERCURY_MAIN_MODULES) $(TAGS_FILE_EXISTS)
@@ -231,7 +237,7 @@ javas:	$(mslice.javas) \
 #-----------------------------------------------------------------------------#
 
 realclean_local:
-	rm -f tags SLICE_FLAGS SLICE_FLAGS.date \
+	rm -f Mercury.modules tags SLICE_FLAGS SLICE_FLAGS.date \
 		.mdbcomp_modules $(MDBCOMP_MODULES) mdbcomp.*.err
 	rm -f $(PDBS) vc*.pdb
 
